# g2g

./: CMakeLists.txt  Circle.cpp  GcodePlotter.cpp  GerberDecoder.cpp  LICENSE.txt  Poly.cpp  Rect.cpp  main.cpp  penholder51.scad  penholder52.scad  relative.yaml
Apertures/: Circle.cpp
include/: Circle.h  Command.h  Decoder.h  GcodePlotter.h  GerberDecoder.h  Line.h  Octagon.h  Plotter.h  Point.h  Poly.h  Rect.h
